--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 /* flex + grid */
+* {
+    box-sizing: border-box;
+}
 
 .main-tain,
 .contact,
 .phone,
 .email,
-.mywork {
+.mywork,
+.nameLink {
     display: flex;
 }
 
@@ -20,7 +24,7 @@
 .gridForProj {
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
+    gap: 40px;
 }
 
 .two {
@@ -74,18 +78,86 @@
     width: 25px;
 }
 
-/* evrything else */
+/* top */
+
+.main-tain {
+    gap: 20px;
+}
+
+/* middle */
+
+.projects {
+    margin: 3rem;
+}
+
+.underProjImg {
+    margin-bottom: 2rem;
+}
+
+.nameLink {
+    justify-content: space-between;
+}
+
+.projIMG {
+    height: 200px;
+    text-align: center;
+    align-content: center;
+    font-size: 2rem;
+    color: rgb(53, 52, 52);
+    
+}
+
+.projIMG.one {
+    background-color: rgb(252, 155, 65);
+}
+
+.projIMG.two {
+    background-color: rgb(235, 160, 32);
+}
+
+.projIMG.three {
+    background-color: rgb(255, 194, 79);
+}
+
+.projIMG.four {
+    background-color: rgb(255, 222, 90);
+}
+
+.projIMG.five {
+    background-color: rgb(225, 217, 94);
+}
+
+.projIMG.six {
+    background-color: rgb(239, 237, 128);
+}
 
 
-
+/* contact section */
 .contact {
     background-color: rgb(237, 178, 97);
-    justify-content: center;
     padding: 30px;
-    color: rgb(53, 52, 52)
+    color: rgb(53, 52, 52);
+    width: 100%;
 }
+
 
 .phone,
 .email {
     gap: 20px;
 }
+
+.contact-left,
+.contact-right {
+    width: 50%;
+}
+
+/* media queries */
+@media (max-width: 500px){
+    .contact {
+        flex-direction: column;
+    }
+}
+
+/* @media (max-width: 1000px){
+
+} */
